# cis194

./: .editorconfig  .travis.yml  LICENSE  README.md  cis194.cabal
src/Cis194/: Week1.hs  Week4.hs
src/Cis194/Week2/: Log.hs  LogAnalysis.hs
src/Cis194/Week3/: Golf.hs
src/Cis194/Week5/: Calc.hs  ExprT.hs  Parser.hs  StackVM.hs
src/Cis194/Week6/: Fibonacci.hs
test/Cis194/: Week1Spec.hs  Week4Spec.hs
test/Cis194/Week1/: AcceptHanoi.hs
test/Cis194/Week2/: LogAnalysisSpec.hs
test/Cis194/Week3/: GolfSpec.hs
test/Cis194/Week5/: CalcSpec.hs
test/Cis194/Week6/: FibonacciSpec.hs
